--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
@@ -1,12 +1,14 @@
 {
-    "name": "XamlIl.Runtime",
-    "references": [],
+    "name": "EtAlii.xMvvm",
+    "references": [
+        "XamlIl"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": []
 }
