Start introduction of Mono.TextTemplating

--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
@@ -6,9 +6,11 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Mono.TextTemplating.dll"
+    ],
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": []
 }
