Attempt to integrate Mono.TextTemplating
Seems not to work - investigate why.
engine.PreProcess works but engine.Process doesn't...

--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
@@ -8,9 +8,11 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Mono.TextTemplating.dll"
+        "Mono.TextTemplating.dll",
+        "System.CodeDom.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
