Replaced Mono.TextTemplating by DotLiquid.
Reason: Mono.TextTemplating did not compile templates in the Unity editor. DotLiquid worked in the first 5 minutes out of the box and was waaay more easier to apply (and less code)

--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
@@ -3,13 +3,15 @@
     "references": [
         "XamlIl"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Mono.TextTemplating.dll",
-        "System.CodeDom.dll"
+        "DotLiquid.dll",
+        "DotLiquid.resources.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
