--- a/Playground/1. Structure/xMvvm.Unity/Assets/packages.config
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotLiquid" version="2.0.323" />
   <package id="Mono.Cecil" version="0.11.2" />
-  <package id="Mono.TextTemplating" version="2.0.5" />
-  <package id="System.CodeDom" version="4.4.0" />
   <package id="System.Reflection.Emit" version="4.7.0" />
   <package id="System.Reflection.Emit.ILGeneration" version="4.7.0" />
 </packages>
