--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/EtAlii.xMvvm.asmdef
@@ -13,7 +13,7 @@
         "DotLiquid.dll",
         "DotLiquid.resources.dll"
     ],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
