Removed small rider warning in code template

--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/Editor/XamlVariant1/PartialCsTemplate.template
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/Editor/XamlVariant1/PartialCsTemplate.template
@@ -2,7 +2,7 @@
 {
     using EtAlii.xMvvm.XamlVariant1;
 
-    public partial class {{className}} : View 
+    public partial class {{className}} 
     {    
             public void Initialize()
             {
