Removed Engine references from XamlIl projects

--- a/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl/XamlIl.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl/XamlIl.asmdef
@@ -11,5 +11,6 @@
     ],
     "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": true
 }
