--- a/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Cecil/XamlIl.Cecil.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Cecil/XamlIl.Cecil.asmdef
@@ -14,5 +14,6 @@
     ],
     "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": true
 }
