--- a/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Cecil/XamlIl.Cecil.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Cecil/XamlIl.Cecil.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "XamlIl"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
