--- a/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Runtime/XamlIl.Runtime.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl.Runtime/XamlIl.Runtime.asmdef
@@ -1,12 +1,15 @@
 {
     "name": "XamlIl.Runtime",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": true
 }
