--- a/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl/XamlIl.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/XamlIl/XamlIl/XamlIl.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "XamlIl",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
@@ -12,5 +14,5 @@
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": true
+    "noEngineReferences": false
 }
