--- a/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/Editor/XamlVariant1/Templates/PartialCsTemplate.template
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/xMvvm/Editor/XamlVariant1/Templates/PartialCsTemplate.template
@@ -2,7 +2,7 @@
 {
     public partial class {{className}} 
     {    
-        public void Initialize()
+        private void Initialize()
         {
         }
     }
