--- a/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/GeneratedCsTemplate.template
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/GeneratedCsTemplate.template
@@ -13,38 +13,23 @@ namespace {{classNamespace}}
 {
     using UnityEngine;
     using System;
-    using System.ComponentModel;
     
-    public partial class {{className}} : EtAlii.xMvvm.XamlVariant1.View, INotifyPropertyChanged  
+    public partial class {{className}} : EtAlii.xMvvm.XamlVariant1.View<{{view.ViewModelType}}>  
     {
-        /// <summary>
-        /// The {{view.ViewModelType}} that should be used to power the view.     
-        /// </summary>
-        public {{view.ViewModelType}} ViewModel { get => _viewModel; set => PropertyChanged.SetAndRaise(this, ref _viewModel, value); }
-        private {{view.ViewModelType}} _viewModel;
-        
-        public GameObject GameObject {get;}
-
-        public event PropertyChangedEventHandler PropertyChanged;
-        
 {% for element in view.Elements -%}
         private readonly EtAlii.xMvvm.XamlVariant1.Binding<{{element.Type}}, {{view.ViewModelType}}> {{ element.Name | PrivateMember }};
 {% endfor -%}
          
-        public {{className}}()
-            : this(GameObject.Instantiate(Resources.Load("{{view.Prefab}}", typeof(GameObject))) as GameObject)
+        public {{className}}() : this(GameObject.Instantiate(Resources.Load("{{view.Prefab}}", typeof(GameObject))) as GameObject)
         {
         }
         
-        public {{className}}(GameObject gameObject)
+        public {{className}}(GameObject gameObject) : base(gameObject)
         {
-            // Setup a prefab instance. 
-            GameObject = gameObject;
-            
             // Wire the bindings.
 {% for element in view.Elements -%}{% case element.ElementType -%}
-{% when "Property" %}            {{ element.Name | PrivateMember }} = new EtAlii.xMvvm.XamlVariant1.PropertyBinding<{{element.Type}}, {{view.ViewModelType}}>("{{element.Path}}", component => component.{{element.Member}}, vm => "vm.{{element.Value}}");
-{% when "Event" %}            {{ element.Name | PrivateMember }} = new EtAlii.xMvvm.XamlVariant1.EventBinding<{{element.Type}}, {{view.ViewModelType}}>("{{element.Path}}", component => component.{{element.Member}}, vm => "vm.{{element.Method}}");
+{% when "Property" %}            {{ element.Name | PrivateMember }} = new EtAlii.xMvvm.XamlVariant1.PropertyBinding<{{element.Type}}, {{view.ViewModelType}}>(this, "{{element.Path}}", component => component.{{element.Member}}, vm => vm.{{element.Value}});
+{% when "Event" %}            {{ element.Name | PrivateMember }} = new EtAlii.xMvvm.XamlVariant1.EventBinding<{{element.Type}}, {{view.ViewModelType}}>(this, "{{element.Path}}", component => component.{{element.Member}}, vm => vm.{{element.Handler}});
 {% endcase -%}{% endfor -%}                 
             // And initialize.
             Initialize();   
