--- a/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/EtAlii.xMvvm.asmdef
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/EtAlii.xMvvm.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "XamlIl",
         "XamlIl.Cecil",
-        "XamlIl.Runtime"
+        "XamlIl.Runtime",
+        "Mono.TextTemplating"
     ],
     "includePlatforms": [
         "Editor"
